[package]
name = "clippy"
version = "1.3.1"
description = "Clipboard Manager built with Rust & Typescript"
authors = ["0-don"]
license = "MIT"
repository = "https://github.com/0-don/clippy"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "migration", "entity", "common", "tao"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
common = { path = "common" }
tao = { path = "tao" }

color-backtrace = "0"

tauri = { version = "2", features = [
  "macos-private-api",
  "devtools",
  "tray-icon",
] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
global-hotkey = "0"

sea-orm = "1"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0"
async-trait = "0"
serde = "1"
serde_json = "1"

dotenvy = "0"
chrono = "0"
enigo = "0"
regex = "1"

# image
image = "0"
base64 = "0"
# file mime parser
infer = "0"
mime_guess = "2"
tree_magic_mini = "3"

# clipboard sync
google-drive3 = "6"
http-body-util = "0"

[profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# opt-level = "s"
# strip = true
