[package]
name = "clippy"
version = "1.4.6"
description = "Clipboard Manager built with Rust & Typescript"
authors = ["0-don"]
license = "MIT"
repository = "https://github.com/0-don/clippy"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "migration", "entity", "common"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
common = { path = "common" }

tauri = { version = "2", features = [
  "macos-private-api",
  "devtools",
  "tray-icon",
] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
global-hotkey = "0" # tauri-plugin-global-hotkey

sea-orm = "1"
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0"
serde = "1"
serde_json = "1"

dotenvy = "0"
chrono = "0"

# pattern replace
regex = "1"

# keyboard input
enigo = "0"

# image
image = "0"
base64 = "0"

# file mime parser
infer = "0"
mime_guess = "2"
tree_magic_mini = "3"
urlencoding = "2"

# clipboard sync
google-drive3 = "6"
http-body-util = "0"

# cipher
ring = "0"

# caching
moka = { version = "0", features = ["sync"] }

[profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# opt-level = "s"
# strip = true
