[package]
name = "clippy"
version = "1.6.26"
description = "Clipboard Manager built with Rust & Typescript"
authors = ["0-don"]
license = "MIT"
repository = "https://github.com/0-don/clippy"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crasdate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = [".", "migration", "entity", "common"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
common = { path = "common" }

tauri = { version = "2", features = [
  "macos-private-api",
  "devtools",
  "tray-icon",
] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = { git = "https://github.com/0-don/tauri-plugin-clipboard", branch = "wayland-support" }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-log = "2"
log = "0"

# Native window glass: acrylic on Windows (10 + 11, incl. 24H2 where the newer
# DWM system-backdrop API doesn't render through WebView2) + liquid glass/vibrancy
# on macOS. Rounded corners on Win11 are set separately via windows-sys DWM.
window-vibrancy = "0"
global-hotkey = { git = "https://github.com/0-don/global-hotkey", branch = "unified-wayland" } # tauri-plugin-global-hotkey

sea-orm = "1"
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
rayon = "1"
serde = "1"
serde_json = "1"

dotenvy = "0"
chrono = "0"

# pattern replace
regex = "1"

# keyboard input
enigo = { version = "0", features = ["wayland", "libei_smol"] }

# image
image = "0"
base64 = "0"

# file mime parser
infer = "0"
mime_guess = "2"
tree_magic_mini = "3"
urlencoding = "2"

# clipboard sync
google-drive3 = { version = "7", features = ["yup-oauth2"] }
http-body-util = "0"

# cipher
ring = "0"

# caching
moka = { version = "0", features = ["sync"] }

# ocr
ocr-rs = "2"

[target.'cfg(windows)'.dependencies]
# Attach to the parent terminal's console (if any) so the GUI release build
# can print logs when launched from a terminal. See attach_parent_console().
windows-sys = { version = "0", features = [
  "Win32_System_Console",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }

[profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# opt-level = "s"
# strip = true
