[package]
name = "common"
version = "1.0.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

async-trait = "0"
tokio = "1"

serde = "1"
serde_json = "1"

google-drive3 = "6"
global-hotkey = "0"
sea-orm = "1"
tl = "0"
chrono = "0"
regex = "1"