[package]
name = "common"
version = "1.0.0"
edition = "2021"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

async-trait = "0"
tokio = "1"

serde = "1"
serde_json = "1"

google-drive3 = "7"
global-hotkey = { git = "https://github.com/0-don/global-hotkey", branch = "unified-wayland" }
sea-orm = "1"
tl = "0"
chrono = "0"
globset = "0"
regex = "1"
zeroize = { version = "1", features = ["derive"] }
