[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.11.3", features = [
  "macros",
  "with-chrono",
  "with-uuid",
  "with-json",
], default-features = false }
chrono = "0.4.26"
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4", "serde"] }


[dependencies.sea-orm-migration]
version = "0.11.3"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-sqlite",          # `DATABASE_DRIVER` feature
]
